执行节点增加客户端类型